--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@repo/types": "workspace:*",
+    "@repo/utils": "workspace:*",
     "@headlessui/react": "^2.2.9",
     "@tanstack/react-query": "^5.90.20",
     "next": "16.1.6",
