--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
-    "@headlessui/react": "^2.2.9",
     "@tanstack/react-query": "^5.90.20",
+    "agentation": "^1.3.2",
     "next": "16.1.6",
     "next-intl": "^4.8.1",
     "react": "19.2.3",
