--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,12 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@repo/types": "workspace:*",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.0",
+    "@repo/database": "workspace:*",
+    "@repo/types": "workspace:*",
     "bcryptjs": "^2.4.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
