--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "turbo": "^2.0.0",
-    "prettier": "^3.0.0"
+    "@tailwindcss/postcss": "^4",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^4",
+    "turbo": "^2.0.0"
   }
 }
