--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@repo/utils": "workspace:*",
     "@tanstack/react-query": "^5.90.20",
     "agentation": "^1.3.2",
+    "lightweight-charts": "^5.1.0",
     "next": "16.1.6",
     "next-intl": "^4.8.1",
     "react": "19.2.3",
